--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "homepage": "https://CorinaVizitiu.github.io/veganlife",
-    "name": "veganlife",
+    "homepage": "https://corinavizitiu.github.io/React--veganlife/",
+    "name": "React--veganlife",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
